Fix rendering event form's manipulation toolbar on small devices
- add space between button wrapped into the second row
- use pseudo-class nth-child to add margin-top to the last button

--- a/src/shared-components/EventForm/EventForm.css
+++ b/src/shared-components/EventForm/EventForm.css
@@ -12,10 +12,20 @@
     text-align: center;
 }
 
-.EventForm__toolbar button:not(last-of-type) {
+.EventForm__toolbar button:not(:last-of-type) {
     margin-right: 15px;
+}
+
+.EventForm__toolbar button:nth-child(3) {
+    margin-top: 20px;
 }
 
 .EventForm__toolbar button:disabled {
     cursor: not-allowed;
+}
+
+@media (min-width: 400px) {
+    .EventForm__toolbar button:nth-child(3) {
+        margin-top: 0;
+    }
 }
